# sane-backend-oki

./: Makefile.am  Makefile.in  aclocal.m4  changelog.in  configure  configure.in  readme.in  sane-backend-oki.lsm
backend/: Makefile.am  Makefile.in  dllsetup.in  logo.xpm  odc.cpp  odc.h  odc_device.cpp  odc_device.h  odc_products.cpp  odc_products.h
driver/: copying.oki.enu  copying.oki.esp  copying.oki.fra  copying.oki.jpn  copying.oki.ptb  odc_define.h
driver/devel/: boundary.h  libstatus.h  misc.h  pnm.h  scandifc.h  scandifdef.h  tracer.h
include/: Makefile.in
include/sane/: config.h.in  sanei_usb.h
lib/: Makefile.in  alloca.c  getenv.c  inet_ntop.c  inet_pton.c  isfdtype.c  sigprocmask.c  snprintf.c  strcasestr.c  strdup.c  strndup.c  strsep.c  usleep.c  vsyslog.c
pardus/: Makefile.am  Makefile.in  actions.py.in  package.py.in  pspec.xml.in  service.py.in
po/: Makefile.am  Makefile.in  POTFILES  de.po  en.po  es.po  fr.po  it.po  ja.po  pt_BR.po  ru.po
sanei/: Makefile.in
